fix for intro.js on ios?

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,8 @@
     --theme-text: black;
   }
 }
+
+/* https://github.com/usablica/intro.js/issues/2081 */
+.introjs-tooltipReferenceLayer {
+    visibility: visible;
+}
